<resources>
    <string name="app_name">Recetas_Cocina</string>
    <string name="facebook_application_id">861409667648898</string>
    <string name="fb_login_protocol_scheme">fb861409667648898</string>
    <string name="title_activity_agregar_recetas">AgregarRecetas</string>
    <string name="nombre_receta">Nombre</string>
    <string name="calificacion_receta">Calificacion</string>
    <string name="dificultad_receta">Dificultad</string>
    <string name="ingredientes_receta">Ingredientes</string>
    <string name="categoria_receta">Categoria</string>
    <string name="favorito_receta">Favorito</string>
    <string name="preparacion_receta">Preparacion</string>
    <string name="btn_agregar">Agregar</string>
    <string name="titulo_Receta">Titulo Receta</string>
    <string-array name="categorias">
        <item>Entradas</item>
        <item>Sopas</item>
        <item>Plato Fuerte</item>
        <item>Postres</item>
    </string-array>
    <string name="tituloCat">Selecione la categoría</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_notification_channel_id">default_channel</string>

    <string name="Entradas">Entradas</string>
    <string name="Sopas">Sopas</string>
    <string name="Postres">Postres</string>
    <string name="PlatoFuerte">Plato Fuerte</string>



</resources>
